[tool.poetry]
name = "fbf"
version = "0.1"
description = "Programmatically interact with FeedbackFruits"
authors = ["Daniel Bosk <dbosk@kth.se>"]
readme = "README.md"
packages = [{include = "fbf", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
weblogin = "^1.8"
typerconf = "^2.6"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
